3. commit